# AutoBuildTest

./: .gitignore  CMakeLists.txt  README.md
cmake/: revision.cmake
cmake/vcpkg/: AutoVcpkg.cmake
src/common/: revision.h.in  test_auto_vcpkg.cpp
